# CPP-Breakout-Game

./: .gitignore  CMakeLists.txt  README.md
include/: Ball.h  Brick.h  BrickFactory.h  Game.h  HUD.h  IGameObserver.h  IPowerUpStrategy.h  MultiBallStrategy.h  Paddle.h  PowerUp.h  SlowBallStrategy.h  WidenPaddleStrategy.h  main.h
levels/: level1.txt
src/: Ball.cpp  Brick.cpp  BrickFactory.cpp  Game.cpp  HUD.cpp  MultiBallStrategy.cpp  Paddle.cpp  PowerUp.cpp  SlowBallStrategy.cpp  WidenPaddleStrategy.cpp
